add withdraw and deposit endpoints (#760)
